# vectra

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
include/vectra/: vectra.hpp  version.hpp.in
include/vectra/backend/: avx.hpp  compute_backend.hpp  none.hpp  sse41.hpp
include/vectra/core/: attributes.hpp  constants.hpp  simd_level.hpp
include/vectra/detail/: cpuid.hpp
include/vectra/dispatch/: runtime_checks.hpp
include/vectra/memory/: allocator.hpp
include/vectra/types/: pack.hpp  vectratype.hpp
tests/: CMakeLists.txt  test_aligned_allocator.cpp  test_backend_none.cpp  test_pack_none.cpp  test_runtime_checks.cpp  test_vectratype_none.cpp  test_vectratype_sse41.cpp
